fix: alert icon could potentially cropped

--- a/static/css/hyde.css
+++ b/static/css/hyde.css
@@ -483,6 +483,7 @@ a.link-post-nav {
 
 .alert-heading {
   font-weight: bold;
+  overflow: visible;
 }
 
 .alert-note {
